# SportsSignal

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  accuracy.py  base.py  game.py  game_boxscore.py  injury.py  player.py  prediction.py  stats.py  team.py  team_rolling_stats.py
backend/app/routers/: accuracy.py  admin.py  games.py  teams.py
backend/app/schemas/: accuracy.py  games.py  teams.py
backend/app/services/: accuracy_tracker.py  cache_manager.py  data_fetcher.py  elo_calculator.py  feature_engineer.py  model_trainer.py  prediction_engine.py  rolling_stats_computer.py
backend/app/utils/: api_client.py  espn_client.py  mlb_client.py  nhl_client.py  sport_config.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/charts/: AccuracyBarChart.tsx  AccuracyLineChart.tsx  CalibrationChart.tsx  QuarterChart.tsx  TeamRadarChart.tsx
frontend/src/components/domain/: AccuracyCard.tsx  DateNavigator.tsx  FactorBadge.tsx  FactorList.tsx  PredictionCard.tsx  TeamLogo.tsx  WinProbabilityBar.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  (+4 more)
frontend/src/context/: AppContext.tsx
frontend/src/lib/: formatters.ts
frontend/src/pages/: AccuracyPage.tsx  CalibrationPage.tsx  DashboardPage.tsx  GameDetailPage.tsx  NotFoundPage.tsx
frontend/src/types/: index.ts
(+3 files in other folders)
