[project]
name = "sportssignal-backend"
version = "0.1.0"
description = "Sports prediction analytics API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
    "joblib>=1.4.0",
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "optuna>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
